--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   <body class="body_background">
     <header>
     <div id="head">
-      <h1>Priyanka Shaji</h1>
+      <h1 id="h1_home">Priyanka Shaji</h1>
     </div>
     </header>
       <ul>
@@ -16,18 +16,15 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <p>The places I would like to visit in the near future.</p>
-      <div >
+
         <img id="paris" src="img/paris.jpg">
-      </div>
-      <div >
+
         <img id="egypt" src="img/egypt.jpg">
-      </div>
-      <div >
+
         <img id="venice" src="img/venice.jpg">
-      </div>
-      <div >
-  <img id="machu" src="img/machu.jpg">
-      </div>
+
+         <img id="machu" src="img/machu.jpg">
+      
 
   </body>
 </html>
